--- a/templates/header.html
+++ b/templates/header.html
@@ -24,8 +24,8 @@
     <div class="container px-4 px-lg-5">
         <!-- Logo -->
         <a class="navbar-brand" href="/">
-            <img src="{{ url_for('static', filename='assets/img/logo-light.jpg') }}" alt="Logo"
-                 style="width: 100px; height: auto;">
+            <img src="{{ url_for('static', filename='assets/img/logo.png') }}" alt="Logo"
+                 style="width: 150px; height: auto;">
         </a>
 
         <!-- Toggle Button -->
